--- a/SmartToDoServer/pom.xml
+++ b/SmartToDoServer/pom.xml
@@ -64,6 +64,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+ 		   <groupId>org.json</groupId>
+ 		   <artifactId>json</artifactId>
+  		  <version>20190722</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
